# Data-Analytics

Project_Job_Postings/: .gitignore  Interview questions cont.docx  Interview questions.docx  Notes.docx  dbt_project.yml  pyproject.toml  requirements.txt  ~$Notes.docx  ~$terview questions cont.docx  ~$terview questions.docx  ~WRL1542.tmp
Project_Job_Postings/airflow/: Dockerfile  Notes.docx  docker-compose.yaml
Project_Job_Postings/airflow/dags/: job_data_pipeline_dag.py
Project_Job_Postings/dbt/: Notes.docx
Project_Job_Postings/dbt/Job_Postings/: .user.yml  dbt_project.yml  profiles.yml
Project_Job_Postings/dbt/Job_Postings/models/: src_job_postings.yml
Project_Job_Postings/dbt/Job_Postings/models/marts/: job_postings_clean.sql
Project_Job_Postings/dbt/Job_Postings/models/staging/: stg_job_postings.sql
Project_Job_Postings/src/data/: job_postings.csv
Project_Job_Postings/src/data_gen/: generate_jobs.py
Project_Job_Postings/src/loaders/: load_to_snowflake.py
Project_Job_Postings/tests/: test_generate_jobs.py  test_load_to_snowflake.py
